# flower

./: .gitignore  AGENTS.md  pqc_aggregation.md
examples/secaggplusplus-numpy/: pyproject.toml
examples/secaggplusplus-numpy/secaggplusplus_numpy/: __init__.py  client_app.py  server_app.py  task.py
framework/: pyproject.toml
framework/py/flwr/client/mod/: __init__.py
framework/py/flwr/client/mod/secure_aggregation/: __init__.py  secaggplus_mod.py  secaggplus_plus_mod.py  secaggplus_plus_mod_test.py  secaggplus_pq_integration_test.py  secaggplus_pq_mod.py  secaggplus_pq_mod_test.py
framework/py/flwr/common/secure_aggregation/: secaggplus_constants.py  secaggplus_utils.py  secaggplus_utils_test.py
framework/py/flwr/common/secure_aggregation/crypto/: degree_threshold.py  degree_threshold_test.py  pq_kem.py  pq_kem_test.py  pq_pke.py  pq_pke_test.py
framework/py/flwr/server/workflow/: __init__.py
framework/py/flwr/server/workflow/secure_aggregation/: __init__.py  secaggplus_plus_workflow.py  secaggplus_pq_workflow.py  secaggplus_workflow.py
framework/speed_tests/: flower_secagg_benchmark.json
secaggpp-benchmark/: .dockerignore  .gitignore  Dockerfile  pqc_aggregation.md  secaggpp_secaggp_benchmark.sh
secaggpp-benchmark/benchmark-apps/classical/secaggexample/: server_app.py
secaggpp-benchmark/benchmark-apps/pp/: pyproject.toml
secaggpp-benchmark/benchmark-apps/pp/secaggexample/: client_app.py  server_app.py
secaggpp-benchmark/speed_tests/: benchmark_flower_secagg.py  benchmark_flower_secagg_mnist.py  flower_secagg_benchmark.json  plot_mnist_benchmark.py
speed_tests/: benchmark_flower_secagg.py  benchmark_flower_secagg_mnist.py  flower_secagg_benchmark.json  flower_secagg_mnist_benchmark.json  plot_mnist_benchmark.py  results.csv
