[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secaggplusplus-numpy"
version = "1.0.0"
description = "Post-quantum SecAgg++ demo with NumPy and Flower"
license = {file = "LICENSE"}
dependencies = [
    "flwr[simulation]>=1.32.0",
    "numpy>=1.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"
fab-format-version = 1
flwr-version-target = "1.32.0"

[tool.flwr.app.components]
serverapp = "secaggplusplus_numpy.server_app:app"
clientapp = "secaggplusplus_numpy.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
num-partitions = 5
num-features = 100
num-examples-per-client = 100
local-epochs = 1
learning-rate = 0.01
# SecAgg++ protocol parameters
num-shares = 3
reconstruction-threshold = 2
max-weight = 1000.0
timeout = 120.0
