[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flower-secure-aggregation"
version = "1.1.5"
description = "Secure Aggregation in Flower"
license = {file = "LICENSE"}
dependencies = [
    "flwr[simulation]>=1.32.0",
    "flwr-datasets[vision]>=0.6.0",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "attrs>=23,<24",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"
fab-format-version = 1
flwr-version-target = "1.32.0"

[tool.flwr.app.components]
serverapp = "secaggexample.server_app:app"
clientapp = "secaggexample.client_app:app"

[tool.uv.sources]
flwr = { path = "/home/alessandro/Documents/flower/framework", editable = true }

[tool.flwr.app.config]
num-server-rounds = 5
fraction-evaluate = 0.5
local-epochs = 1
learning-rate = 0.1
batch-size = 32
# Parameters for the SecAgg+ protocol
num-shares = 3
reconstruction-threshold = 2
max-weight = 9000
timeout = 120.0
min-fit-clients = 5
min-available-clients = 5
# Demo flag
is-demo = false
